--- a/style.css
+++ b/style.css
@@ -2,3 +2,57 @@
     box-shadow: 0px 0px 5px 0px black;
 }
 
+section {
+    padding-top: 80px;
+}
+
+#home .row {
+    align-items: center;
+}
+
+#home .home-kiri h3 {
+    font-size: 42px;
+}
+
+#home .home-kiri h1 {
+    font-size: 68px;
+}
+
+#home .home-kiri p {
+    font-weight: 700;
+    margin: 0 0 30px 0;
+}
+
+#home .home-kiri a {
+    text-decoration: none;
+    border: 3px solid black;
+    border-radius: 25px;
+    padding: 5px 30px;
+}
+
+#home .home-kiri a:hover {
+    color: white;
+    background-color: black;
+
+}
+
+#home .home-kanan img {
+    width: 100%;
+}
+
+#home .arrow {
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+#home .arrow a {
+    text-decoration: none;
+    color: black;
+    padding: 5px;
+}
+
+#home .arrow a img {
+    width: 50px;
+}
