--- a/style.css
+++ b/style.css
@@ -217,6 +217,10 @@ section::before {
     content: "Contact";
 }
 
+.sosmed-item a {
+    margin-right: 5px;
+}
+
 .contact .sosmed {
     margin-top: 40px;
 }
@@ -236,4 +240,66 @@ section::before {
     border: 1px solid black;
     border-radius: 25px;
     padding: 5px 30px;
+}
+
+
+@media only screen and (max-width: 768px) {
+    section {
+        padding-top: 80px;
+        position: relative;
+        padding-bottom: 80px;
+    }
+
+    section::before {
+        z-index: -1;
+        content: '';
+        position: absolute;
+        font-size: 64px;
+        color: gray;
+        font-weight: 700;
+        top: -30px;
+        left: 10px;
+    }
+
+
+    #home .row {
+        display: flex;
+        flex-direction: column-reverse;
+        gap: 20px;
+    }
+
+    #home .home-kiri {
+        width: 100%;
+    }
+
+    #home .home-kanan {
+        width: 100%;
+    }
+
+    .work-box {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .work-box p {
+        width: 100%;
+    }
+
+    .work-box .img-projek {
+        width: 100%;
+    }
+
+    .contact-box {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .contact-box-kiri {
+        width: 100%;
+    }
+
+    .contact-box-kanan {
+        width: 100%;
+    }
 }
